--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -15,6 +15,7 @@
 /* Globals */
 
 body {
+  min-height: 100vh;
   overflow-x: hidden;
   background: linear-gradient(
       $color-background-overlay,
@@ -23,6 +24,8 @@ body {
     url(../../assets/mobile/image-host.jpg);
   background-size: cover;
   background-position: 50% 0%;
+  background-repeat: no-repeat;
+  background-color: $color-background;
   color: $color-text;
   font-family: "Chivo", sans-serif;
   font-size: rem(16px);
@@ -30,8 +33,7 @@ body {
   line-height: 1.6;
 
   @include bp-up("medium") {
-    background: none;
-    background-color: $color-background;
+    background-image: none;
     font-size: rem(18px);
   }
 }
